2007-09-03  Martin Mares <mj@ucw.cz>

	* Resurrected the Windows port, including cross-compilation by MinGW.
	Patch by Samuel Bronson <naesten@gmail.com>.

2007-08-31  Martin Mares <mj@ucw.cz>

	* Makefile, lib/Makefile: `ar' and `ranlib' can be overriden to allow
	cross-compilation.

2007-08-27  Martin Mares  <mj@ucw.cz>

	* lib/names.c (pci_open): When calling gzopen(), use "rb" file mode
	instead of "r". This is needed on DOS systems, where this function
	somewhat illogically uses the binary flag for the compressed file
	instead of the decompressed stream inside, where binariness really
	matters.

2007-08-14  Martin Mares  <mj@ucw.cz>

	* lspci.c (show_ht): Added decoding of Hypertransport MSI mapping capability,
	based on a patch by Jason Gunthorpe.

	* tests/cap-MSI-mapping: Added a test case. I plan to add test cases
	(which are dumps of config space) for all new features.

2007-06-20  Martin Mares  <mj@ucw.cz>

	* Released as 2.2.6.

	* Makefile: Added an "install-lib" target. Thanks to Dan Nicholson
	for a patch.

	* Makefile, lib/Makefile: Generate and install pkg-config file
	for libpci. Again by Dan Nicholson.

2007-06-20  Thomas Schwinge  <tschwinge@gnu.org>

	* lib/i386-io-hurd.h: Rewritten for new Hurd kernels.

2007-05-04  Martin Mares  <mj@ucw.cz>

	* Released as 2.2.5.

	* pci.ids: Updated to the current snapshot of the database.

2007-02-14  Martin Mares  <mj@ucw.cz>

	* lspci.c (show_express): Added PCI/PCI-X to PCI-Express Bridge type.
	Patch by Mark Glines.

2007-02-09  Martin Mares  <mj@ucw.cz>

	* pci.ids: Updated to the current snapshot of the database.

2007-02-06  Martin Mares  <mj@ucw.cz>

	* Replaced bzero() by memset() everywhere, it's better to lose a tiny
	bit of readability than maintain hacks to make it work on various systems.

	* lib/configure: tr on Solaris is a bit weird and it requires `[A-Z]'
	instead of `A-Z'. Fortunately, the extra brackets don't hurt otherwise.
