@@ -58,8 +58,9 @@ static struct pci_access *pacc;
  *  This increases our memory footprint, but only slightly since we don't
  *  use alloca() much.
  */
-
-#if defined(__GNUC__) && !defined(PCI_OS_WINDOWS)
+#if defined (__FreeBSD__) || defined (__NetBSD__) || defined (__OpenBSD__) || defined (__DragonFly__)
+/* alloca() is defined in stdlib.h */
+#elif defined(__GNUC__) && !defined(PCI_OS_WINDOWS)
 #include <alloca.h>
 #else
 #undef alloca
